fixed bug on mobile browser

--- a/src/app/components/Desktop/style.scss
+++ b/src/app/components/Desktop/style.scss
@@ -279,13 +279,11 @@
     }
 
     #desktop-pin-hidden-input {
-      background-color: transparent;
-      border: none;
-      height: 0px;
-      outline: none;
       pointer-events: none;
+      opacity: 0;
+      width: 100%;
+      height: 0;
       position: absolute;
-      width: 0px;
     }
 
     #desktop-pin {
